--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "apes",
   "version": "0.3.0",
   "description": "A tiny application and HTTP API framework for Express.js.",
-  "main": "lib/main.js",
+  "main": "lib/main",
   "files": [
     "lib",
     "README.md",
     "CHANGELOG.md"
   ],
+  "typings": "lib/main",
   "scripts": {
-    "prepublish": "npm run predocs && git commit -a -m 'Updated documentation'",
     "postpublish": "git push origin --tags && git push -f origin",
     "pretest": "npm run clean",
     "test": "./node_modules/.bin/mocha --recursive test",
@@ -17,7 +17,7 @@
     "prepare-coverage": "npm run clean && ./node_modules/.bin/tsc -p test/tsconfig.json && ./node_modules/.bin/istanbul --report=json cover ./node_modules/.bin/_mocha -- --opts test/fixtures --recursive test/",
     "coverage": "npm run prepare-coverage && ./node_modules/.bin/remap-istanbul -i coverage/coverage-final.json -o coverage -t html",
     "travis-ci": "npm run prepare-coverage && ./node_modules/.bin/remap-istanbul -i coverage/coverage-final.json -t lcovonly | ./node_modules/coveralls/bin/coveralls.js",
-    "predocs": "npm run clean && tsc",
+    "predocs": "npm run clean && tsc -p tsconfig.json",
     "docs": "./node_modules/.bin/jsdoc -c .jsdoc.json -t ./node_modules/minami -R README.md -r",
     "clean": "rm -rf log test/log && find lib test -name '*.js' -delete -o -name '*.map' -delete"
   },
