--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "chai-http": "~3.0.0",
     "chai-moment": "~0.1.0",
     "coveralls": "~2.11.14",
-    "esdoc": "next",
-    "esdoc-es7-plugin": "^0.0.3",
+    "esdoc": "1.0.0",
+    "esdoc-es7-plugin": "~0.0.3",
     "eslint": "~3.9.1",
     "mocha": "~3.1.0",
     "nock": "~9.0.2",
