--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "compression": "~1.6.2",
     "express": "~4.14.0",
     "fs-extra": "~1.0.0",
-    "http2": "~3.3.6",
     "moment": "~2.16.0",
     "on-headers": "~1.0.1",
     "serve-static": "~1.11.1",
+    "spdy": "~3.4.4",
     "sprintf-js": "~1.0.3",
     "winston": "~2.3.0"
   },
@@ -50,7 +50,7 @@
     "chai-http": "~3.0.0",
     "chai-moment": "~0.1.0",
     "coveralls": "~2.11.14",
-    "esdoc": "1.0.0",
+    "esdoc": "~0.4.8",
     "esdoc-es7-plugin": "~0.0.3",
     "eslint": "~3.9.1",
     "mocha": "~3.1.0",
