--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "label": "Apes",
   "version": "0.6.3",
   "description": "A tiny application and HTTP API framework for Express.js.",
-  "main": "lib/main",
+  "main": "lib/main.js",
   "files": [
     "lib",
     "README.md",
