--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://github.com/ShogunPanda/apes",
   "dependencies": {
+    "bluebird": "~3.4.6",
     "body-parser": "~1.15.2",
     "compression": "~1.6.2",
     "express": "~4.14.0",
